fixed the photoGrid forever by adjusting the height of photogrid to be 100vh and photo-column to be 100% with overflow: hidden

--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -6,9 +6,9 @@
     background-color: rgb(7, 13, 22);
     color: white; /* Light text color for contrast */
     flex-wrap: wrap; /* Ensure the sections can wrap */
-    position: relative;
+    /* position: relative; */
     z-index: 1000;
-    margin-top: 1600px;
+    margin-top: 2000px;
 }
 
 .footer-section {
@@ -56,7 +56,7 @@
 
 @media (min-width: 450px) {
     .footer {
-        position: relative;
+        /* position: relative; */
         z-index: 2000;
         margin-top: 1600px;
     }
