--- a/frontend/src/components/PhotoGrid/PhotoGrid.css
+++ b/frontend/src/components/PhotoGrid/PhotoGrid.css
@@ -7,6 +7,7 @@
     justify-content: center;
     position: relative;
     z-index: 5;
+    height: 100vh;
 }
 
 .photo-column {
@@ -16,6 +17,8 @@
     will-change: transform;
     flex: 0 0 auto; 
     width: calc((100% / 6) - 10px); /* Adjust '6' to change the number of columns */
+    height: 100%;
+    overflow: hidden;
 }
 
 .photo-item {
