--- a/frontend/src/components/ServicesSection/ServicesSection.module.css
+++ b/frontend/src/components/ServicesSection/ServicesSection.module.css
@@ -12,7 +12,7 @@
     padding: 200px 20px 20px 20px;
     background-color: rgb(239, 239, 239);
     height: 100%;
-    padding-bottom: 400px;
+    padding-bottom: 00px;
 }
 @keyframes slideAndFade {
     from {
@@ -70,3 +70,4 @@
     }
 }
 /*  */
+
